@@ -1,0 +1,9 @@
+##parameters=
+##
+# $Id$
+
+return [
+    "work",
+    "pending",
+    "published",
+    ]
