@@ -3,7 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- Using getWorkflowStateNames.py in generic_lib.pt to make the latter more
+  easily customizable when new workflow states become available.
 Bug fixes:
 ~~~~~~~~~~
 -
